force-app/main/default/objects/yTica__c.object
<CustomObject>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuthenticatedSupplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Authenticated Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageScore__c</fullName>
        <description>yTica Average Score</description>
        <label>Average Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CreatedSFDCcaseCasecomments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Created SFDC case/Case comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Didntshareinternalcontactinfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Didn&apos;t share internal contact info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedinUser__c</fullName>
        <description>If the person logged is is the same as the rep.</description>
        <formula>IF(Rep__r.Id = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NosignsofCallAvoidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>No signs of Call Avoidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NouseofInappropriatelanguage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>No use of Inappropriate language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Productivity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Properregardforallprocesses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for 01246792</description>
        <label>Proper regard for all processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Id__c</fullName>
        <externalId>true</externalId>
        <label>Rep Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>yTica</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StarRating__c</fullName>
        <description>yTica Star Rating</description>
        <label>Star Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>yTica</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Y-{0000000}</displayFormat>
        <label>yTica Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>yTica</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>